# uttt

./: CMakeLists.txt  README.md
doc/: usecases.drawio
src/: main.cpp
src/domain/: types.h
